2019-02-20  Gabriel F. T. Gomes  <gabriel@inconstante.eti.br>

	* sysdeps/powerpc/powerpc64/le/configure.ac: Remove test.
	* sysdeps/powerpc/powerpc64/le/configure: Regenerate.

2019-02-19  Wolfram Sang  <wsa@the-dreams.de>

	* nptl/pthread_mutex_trylock.c: Fix comment.

2019-02-19  Carlos O'Donell  <carlos@redhat.com>

	* nptl/pthread_tryjoin.c: Fix comment.

2019-02-18  Joseph Myers  <joseph@codesourcery.com>

	[BZ #24231]
	* sysdeps/sparc/sparc64/dl-machine.h (elf_machine_rela): Add break
	after R_SPARC_H34 case.

2019-02-18  Florian Weimer  <fweimer@redhat.com>

	* resolv/compat-gethnamaddr.c (Dprintf): Remove definition.
	(getanswer): Do not call Dprintf.
	(res_gethostbyname2_context): Likewise.
	(res_gethostbyaddr_context): Likewise.

2019-02-18  Florian Weimer  <fweimer@redhat.com>

	* libio/libio.h (_IO_stdin, _IO_stdout, _IO_stderr): Remove
	declaration.
	* libio/stdio.c (AL, AL2, _IO_stdin, _IO_stdout, _IO_stderr):
	Remove definitions.
	* libio/stdfiles.c: Update comment.
	* libio/oldstdfiles.c (_IO_check_libio): Update comment.  Do not
	set _IO_stdin, _IO_stdout, _IO_stderr.
	* libio/libioP.h (_IO_fake_stdiobuf): Remove unused declaration.
	[SHLIB_COMPAT (libc, GLIBC_2_0, GLIBC_2_1)] (_IO_legacy_file): New
	inline function.
	(_IO_deallocate_file): New inline function.
	* libio/iolibio.h (_IO_vprintf): Remove definition.
	* libio/iofclose.c (_IO_new_fclose): Use _IO_deallocate_file.
	* libio/oldiofclose.c (_IO_old_fclose): Likewise.
	* libio/iofwide.c (_IO_fwide): Use __glibc_unlikely and
	_IO_legacy_file.
	* libio/oldfileops.c (_IO_old_file_init_internal): Remove
	__builtin_expect.  Use _IO_legacy_file.

2019-02-18  Stefan Liebler  <stli@linux.ibm.com>

	* sysdeps/unix/sysv/linux/tst-clone3.c (do_test):
	Initialize ctid with a known value and remove update of ctid
	after clone.
	(wait_tid): Adjust arguments and call futex_wait with ctid_val
	as assumed current value of ctid_ptr.

2019-02-15  Florian Weimer  <fweimer@redhat.com>
