@@ -1,3 +1,9 @@
+2019-02-20  Martin Liska  <mliska@suse.cz>
+
+	* math/Makefile: Install math-vector-fortran.h.
+	* bits/math-vector-fortran.h: New file.
+	* sysdeps/x86/fpu/bits/math-vector-fortran.h: New file.
+
 2019-02-20  Gabriel F. T. Gomes  <gabriel@inconstante.eti.br>
 
 	* sysdeps/powerpc/powerpc64/le/configure.ac: Remove test.
